# youtube-audio-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
youtube_audio/: __init__.py  __main__.py  browse.py  extract.py
